--- a/WebApp/src/main/resources/templates/fragments/common.html
+++ b/WebApp/src/main/resources/templates/fragments/common.html
@@ -3,9 +3,9 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
@@ -74,7 +74,7 @@
         </div>
     </nav>
 </header>
-<footer class="text-light bg-dark pt-lg-4 pt-md-4 pt-xl-4 pt-sm-0" th:fragment="footer">
+<footer id="footer" class="text-light mt-auto bg-dark pt-lg-4 pt-md-4 pt-xl-4 pt-sm-0" th:fragment="footer">
     <div class="container d-none d-sm-block text-center text-md-left">
         <div class="row">
             <div class="col-md-6 mt-md-0 mt-3">
