--- a/WebApp/src/main/resources/templates/catalog.html
+++ b/WebApp/src/main/resources/templates/catalog.html
@@ -6,9 +6,10 @@
     <div th:replace="fragments/common :: header"></div>
     <div class="container mt-lg-5 border">
         <h1>Content</h1>
-        <th:block th:each="i: ${#numbers.sequence(0, 100)}">
-            <h2>NANI</h2>
-        </th:block>
+        <div class="dropdown-divider"></div>
+        <div>
+
+        </div>
     </div>
     <div th:replace="fragments/common :: footer"></div>
 </div>
