--- a/WebApp/src/main/resources/templates/fragments/common.html
+++ b/WebApp/src/main/resources/templates/fragments/common.html
@@ -29,6 +29,7 @@
                         Vehículos
                     </a>
                     <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/catalog">Todos</a>
                         <a class="dropdown-item" href="#" th:each="vehiculo : ${vehiculos}" th:text="${vehiculo}"></a>
                     </div>
                 </li>
