--- a/WebApp/src/main/resources/templates/home.html
+++ b/WebApp/src/main/resources/templates/home.html
@@ -4,9 +4,9 @@
 <body onresize="refreshFooter()">
 <div id="page-container" style="padding-bottom: 0">
     <div th:replace="fragments/common :: header"></div>
-    <div class="container mt-lg-5">
+    <div class="container mt-lg-5 mt-md-3">
         <div class="row">
-            <form action="/catalog" method="get" class="col-lg p-3 border">
+            <form action="/catalog" method="get" class="col-lg-8 p-3 border">
                 <h3>Buscar vehículo</h3>
                 <div class="dropdown-divider"></div>
                 <div class="form-group row">
@@ -37,15 +37,62 @@
                         </select>
                     </div>
                 </div>
+                <div class="form-group row">
+                    <label for="yearA" class="col-sm-2 col-form-label">Año:</label>
+                    <div class="col-sm-10">
+                        <div class="row">
+                            <div class="col-sm-5">
+                                <select name="year" class="form-control selectpicker" id="yearA">
+                                    <option th:each="i : ${#numbers.sequence( 1970, #dates.year(#dates.createNow())+1)}"
+                                            th:text="${i}"></option>
+                                </select>
+                            </div>
+                            <label for="yearB" class="col-sm-2 col-form-label">hasta</label>
+                            <div class="col-sm-5">
+                                <select name="year" class="form-control selectpicker" id="yearB">
+                                    <option th:each="i : ${#numbers.sequence( 1970, #dates.year(#dates.createNow()))}"
+                                            th:text="${i}"></option>
+                                    <option selected="selected" th:text="${#dates.year(#dates.createNow())+1}"></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="priceA" class="col-sm-2 col-form-label">Año:</label>
+                    <div class="col-sm-10">
+                        <div class="row">
+                            <div class="col-sm-5">
+                                <input name="price" min="0" class="form-control selectpicker" id="priceA" type="number">
+                            </div>
+                            <label for="priceB" class="col-sm-2 col-form-label">hasta</label>
+                            <div class="col-sm-5">
+                                <input name="price" min="0" class="form-control selectpicker" id="priceB" type="number">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="modelo" class="col-sm-2 col-form-label">Lugar:</label>
+                    <div class="col-sm-10">
+                        <select name="lugar" class="form-control selectpicker" id="lugar" data-live-search="true">
+                            <option value="all">Todas las Provincias</option>
+                            <option th:each="provincia : ${provincias}" th:text="${provincia}"></option>
+                        </select>
+                    </div>
+                </div>
                 <button type="submit" class="btn btn-primary float-right">Buscar</button>
             </form>
-            <div class="col-lg p-3 border">
+            <div class="col-lg-4 p-3 border">
                 <h3>Tipos</h3>
                 <div class="dropdown-divider"></div>
             </div>
         </div>
     </div>
-    <div class="container border mt-lg-3"><h2>Anuncios recientes</h2></div>
+    <div class="container border mt-md-3 mt-lg-3">
+        <h2>Anuncios recientes</h2>
+        <div class="dropdown-divider"></div>
+    </div>
     <div th:replace="fragments/common :: footer"></div>
 </div>
 </body>
