--- a/WebApp/src/main/resources/templates/home.html
+++ b/WebApp/src/main/resources/templates/home.html
@@ -59,15 +59,15 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="priceA" class="col-sm-2 col-form-label">Año:</label>
+                    <label for="priceA" class="col-sm-2 col-form-label">Precio:</label>
                     <div class="col-sm-10">
                         <div class="row">
                             <div class="col-sm-5">
-                                <input name="price" min="0" class="form-control selectpicker" id="priceA" type="number">
+                                <input name="price" min="0" value="0" class="form-control selectpicker" id="priceA" type="number">
                             </div>
                             <label for="priceB" class="col-sm-2 col-form-label">hasta</label>
                             <div class="col-sm-5">
-                                <input name="price" min="0" class="form-control selectpicker" id="priceB" type="number">
+                                <input name="price" min="0" value="0" class="form-control selectpicker" id="priceB" type="number">
                             </div>
                         </div>
                     </div>
@@ -86,6 +86,11 @@
             <div class="col-lg-4 p-3 border">
                 <h3>Tipos</h3>
                 <div class="dropdown-divider"></div>
+                <div class="container-fluid">
+                    <div class="row row-cols-2">
+                        <a class="col card card-body" th:each="vehiculo : ${vehiculos}" th:text="${vehiculo}" th:href="@{'/catalog?tipo=' + ${vehiculo}}"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
