Implementación inicial del Login

--- a/PyWebApp/templates/base.html
+++ b/PyWebApp/templates/base.html
@@ -13,6 +13,8 @@
     <script src="{% static "/js/bootstrap-select.min.js" %}"></script>
     <script src="{% static "/js/footer.js" %}"></script>
     <script src="{% static "/js/searchCondition.js" %}"></script>
+    {% block extrahead %}
+    {% endblock %}
     <title>{{ Empresa.Nombre }}</title>
 </head>
 <body onresize="refreshFooter()">
