--- a/PyWebApp/templates/index.html
+++ b/PyWebApp/templates/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
     </div>
-    <div class="container border mt-md-3 mt-lg-3">
+    <div class="container border mt-md-3 mt-lg-3 mb-md-3 mb-lg-3">
         <h2>Anuncios recientes</h2>
         <div class="dropdown-divider"></div>
     </div>
