--- a/PyWebApp/templates/index.html
+++ b/PyWebApp/templates/index.html
@@ -86,7 +86,7 @@
                         <select name="lugar" class="form-control selectpicker" multiple id="lugar" title="Todas las provincias" data-live-search="true">
 {#                            <option value="all">Todas las Provincias</option>#}
                             {% for provincia in provincias %}
-                                <option>{{ provincia }}</option>
+                                <option value="{{ provincia.0 }}">{{ provincia.1 }}</option>
                             {% endfor %}
                         </select>
                     </div>
