--- a/PyWebApp/templates/catalog.html
+++ b/PyWebApp/templates/catalog.html
@@ -10,7 +10,7 @@
     <div class="container-fluid mt-lg-3">
         <div class="row">
             <nav class="border-right col-lg-3 col-md-12">
-                <h1>Datas Generales</h1>
+                <h1>Datos Generales</h1>
                 <div class="dropdown-divider"></div>
                 <div class="form-group row">
                     <label for="estado" class="col-sm-2 col-form-label">Estado:</label>
@@ -38,8 +38,18 @@
                     <div class="col-sm-10">
                         <select name="modelo" class="form-control selectpicker" title="Todos" multiple id="modelo"
                                 data-live-search="true">
-                            <option value="all">Todos</option>
-                            <option th:each="modelo : ${modelos}" th:text="${modelo}"></option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="tipo" class="col-sm-2 col-form-label">Tipo:</label>
+                    <div class="col-sm-10">
+                        <select name="tipo" class="form-control selectpicker" title="Todos" id="tipo"
+                                data-live-search="true">
+                            <option value="all" selected>Todos</option>
+                            {% for tipo in tipos %}
+                                <option value="{{ tipo.0 }}">{{ tipo.1 }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                 </div>
@@ -67,20 +77,17 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="lugar" class="col-sm-2 col-form-label">Lugar:</label>
+                    <label for="lugar" class="col-sm-2 col-form-label">Ciudad:</label>
                     <div class="col-sm-10">
                         <select name="lugar" class="form-control selectpicker" multiple id="lugar"
-                                title="Todas las provincias" data-live-search="true">
+                                title="Todas las ciudades" data-live-search="true">
                             {#                            <option value="all">Todas las Provincias</option>#}
-                            {% for provincia in provincias %}
-                                <option value="{{ provincia.0 }}">{{ provincia.1 }}</option>
+                            {% for ciudad in ciudades %}
+                                <option value="{{ ciudad.0 }}">{{ ciudad.1 }}</option>
                             {% endfor %}
                         </select>
                     </div>
                 </div>
-            <div class="dropdown-divider"></div>
-                <h1>Datas Específicos</h1>
-                <div class="dropdown-divider"></div>
             </nav>
             <div class="col-lg-9 col-md-12">
                 Mostrando
