--- a/PyWebApp/templates/index.html
+++ b/PyWebApp/templates/index.html
@@ -81,12 +81,12 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="lugar" class="col-sm-2 col-form-label">Lugar:</label>
+                    <label for="lugar" class="col-sm-2 col-form-label">Ciudad:</label>
                     <div class="col-sm-10">
-                        <select name="lugar" class="form-control selectpicker" multiple id="lugar" title="Todas las provincias" data-live-search="true">
+                        <select name="lugar" class="form-control selectpicker" multiple id="lugar" title="Todas las ciudades" data-live-search="true">
 {#                            <option value="all">Todas las Provincias</option>#}
-                            {% for provincia in provincias %}
-                                <option value="{{ provincia.0 }}">{{ provincia.1 }}</option>
+                            {% for ciudad in ciudades %}
+                                <option value="{{ ciudad.0 }}">{{ ciudad.1 }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -99,7 +99,7 @@
                 <div class="container-fluid">
                     <div class="row row-cols-lg-2 row-cols-md-2 row-cols-1">
                         {% for tipo in tipos %}
-                            <a class="col" href="/catalog?tipo={{tipo}}">{{tipo}}</a>
+                            <a class="col" href="/catalog?tipo={{tipo.0}}">{{tipo.1}}</a>
                         {% endfor %}
                     </div>
                 <div class="row justify-content-center">
