--- a/PyWebApp/templates/registrar.html
+++ b/PyWebApp/templates/registrar.html
@@ -9,31 +9,56 @@
         <div class="dropdown-divider"></div>
         <div class="row">
             <form onsubmit="registrar();  return false;" class="w-100 p-3 pb-0">
+                <div id="mensaje" class="text-danger"></div>
                 <h4>Datos de ingreso</h4>
                 <div class="form-group row mt-3">
                     <label for="username" class="col-sm-2 col-form-label">Nombre de Usuario:</label>
                     <div class="col-sm-10">
-                        <input id="username" class="col-12" type="text" required>
+                        <input id="username" class="col-12 form-control" type="text" required>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="pwdA" class="col-sm-2 col-form-label">Contraseña:</label>
                     <div class="col-sm-10">
-                        <input id="pwdA" class="col-12" type="password" required>
+                        <input id="pwdA" class="col-12 form-control" type="password" required>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="pwdB" class="col-sm-2 col-form-label">Repita la contraseña:</label>
                     <div class="col-sm-10">
-                        <input id="pwdB" class="col-12" type="password" required>
+                        <input id="pwdB" class="col-12 form-control" type="password" required>
                     </div>
                 </div>
                 <div class="dropdown-divider"></div>
                 <h4>Datos generales</h4>
                 <div class="form-group row">
+                    <label for="cedula" class="col-sm-2 col-form-label">Cédula:</label>
+                    <div class="col-sm-10">
+                        <input id="cedula" class="col-12 form-control" type="text" required>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="email" class="col-sm-2 col-form-label">Email:</label>
+                    <div class="col-sm-10">
+                        <input id="email" class="col-12 form-control" type="text" required>
+                    </div>
+                </div>
+                <div class="form-group row">
                     <label for="nombre" class="col-sm-2 col-form-label">Nombre:</label>
                     <div class="col-sm-10">
-                        <input id="nombre" class="col-12" type="text" required>
+                        <input id="nombre" class="col-12 form-control" type="text" required>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="apellido" class="col-sm-2 col-form-label">Apellido:</label>
+                    <div class="col-sm-10">
+                        <input id="apellido" class="col-12 form-control" type="text" required>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="direccion" class="col-sm-2 col-form-label">Dirección:</label>
+                    <div class="col-sm-10">
+                        <textarea id="direccion" class="col-12 form-control" required></textarea>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary float-right">Registrar</button>
@@ -43,28 +68,54 @@
     <script type="text/javascript">
         var ready = true;
 
+        $('.form-control').change(function () {
+            $(this).removeClass('is-invalid')
+        });
+
         function registrar() {
             if (ready) {
                 ready = false;
-                let username = $('#username').val();
-                let pwd = md5($('#pwd').val()).toUpperCase();
-                $.ajax({
-                    type: "POST",
-                    url: "/registerrequest",
-                    data: {
-                        csrfmiddlewaretoken: "{{ csrf_token }}",   // < here
-                        state: "inactive",
-                        user: username,
-                        pwd: pwd
-                    },
-                    success: function (msg) {
-                        alert(msg)
-                        ready = true;
-                    },
-                    error: function () {
-                        ready=true;
-                    }
-                })
+                if ($('#pwdA').val() == $('#pwdB').val()) {
+
+                    $.ajax({
+                        type: "POST",
+                        url: "/registerrequest",
+                        data: {
+                            csrfmiddlewaretoken: "{{ csrf_token }}",   // < here
+                            state: "inactive",
+                            user: $('#username').val(),
+                            pwd: md5($('#pwdA').val()).toUpperCase(),
+                            cedula: $('#cedula').val(),
+                            nombre: $('#nombre').val(),
+                            apellido: $('#apellido').val(),
+                            direccion: $('#direccion').val(),
+                            email: $('#email').val()
+                        },
+                        success: function (result) {
+                            if (result['cedula'] && result['username'])
+                                window.location.href = "/login";
+                            else{
+                                console.log(result)
+                                for(let key in result) {
+                                    if(!result[key]) {
+                                        $('#'+key).addClass('is-invalid');
+                                    }
+                                }
+                                document.getElementById('mensaje').innerHTML = 'Hay datos inválidos.'
+                                window.location.href = "#mensaje";
+                            }
+                            ready = true;
+                        },
+                        error: function () {
+                            ready = true;
+                        }
+                    })
+                } else {
+                    $('#pwdB').addClass("is-invalid");
+                    document.getElementById('mensaje').innerHTML = "Las contraseñas no concuerdan.";
+                    window.location.href = "#mensaje";
+                    ready = true;
+                }
             }
         }
     </script>
