Progreso en la creación de vehículo.

--- a/PyWebApp/templates/catalog.html
+++ b/PyWebApp/templates/catalog.html
@@ -28,7 +28,7 @@
                         <select name="marca" class="form-control selectpicker" title="Todos" multiple id="marca"
                                 data-live-search="true">
                             {% for marca in marcas %}
-                                <option>{{ marca }}</option>
+                                <option value="{{ marca.0 }}">{{ marca.1 }}</option>
                             {% endfor %}
                         </select>
                     </div>
