--- a/PyWebApp/templates/adminVehiculo.html
+++ b/PyWebApp/templates/adminVehiculo.html
@@ -200,6 +200,31 @@
             });
         }
 
+        function reloadModelo(idMarca) {
+            $.ajax({
+                type: "POST",
+                url: "/api/Modelo/all?marca="+idMarca,
+                data: {
+                    csrfmiddlewaretoken: "{{ csrf_token }}",   // < here
+                    state: "inactive"
+                },
+                success: function (result) {
+                    let selectVal = $("#marca").val();
+                    if (result['success']) {
+                        let marcaSelect = $("#marca");
+                        marcaSelect.empty();
+                        result['data'].forEach(e => marcaSelect.append('<option value="' + e[0] + '">' + e[1] + "</option>"));
+                        marcaSelect.selectpicker('refresh');
+                        marcaSelect.selectpicker('val', selectVal);
+                    }
+                    ready = true;
+                },
+                error: function () {
+                    ready = true;
+                }
+            });
+        }
+
         function submitMarca() {
             ready = false;
             if ($('#nameMarca').val().length == 0) {
